# libfilesys-smbclient-perl

./: Changes  MANIFEST  META.yml  Makefile.PL  README  SmbClient.pm  SmbClient.xs  config.h.in  configure  configure.in  libauthSamba.c  libauthSamba.h  smb2www-2.cgi  smb2www.css  typemap
debian/: README.Debian  changelog  control  copyright  libfilesys-smbclient-perl.examples  libfilesys-smbclient-perl.lintian-overrides  rules  watch
debian/patches/: 10_Makefile.PL.patch  11_zentyal_link_to_samba4  12_zentyal_use_new_smbclient_interface  13_zentyal_xattr  pod-error.patch  series  spelling-error-in-pod.patch
t/: 01base.t  02tie.t  03tie_perl56.t
